# root-tools

./: .gitignore  AddBranch.C  AddETA.C  AddPIDBranch.C  AppendVars.C  AssignRefWeight.C  BDTApply.C  BDTApply2.C  BDTCut.C  BDTMerit.C  BDTTrain.C  BDTTrain2.C  BDT_BvsS.C  BDT_BvsS_custom.C  BRatio.C  BRatio_NstG.C  BRatio_NstG_Simult.C  BRatio_NstG_split.C  BinEfficiencyAfter.C  CMakeLists.txt  CheckMultiplicity.C  Compare.C  CompareList.C  CompareVar.C  Compute_Value.C  Create_Cuts.C  CutCorrelation.C  CutEff.C  CutPunzi.C  CutSig.C  CutTree.C  EffPerBin.C  EffStats.C  EntriesTable.C  Err_Frac.C  ExpYield.C  Find_ROC.C  Fit_NstG.C  Fit_NstG_Simult.C  Fit_NstG_Wrong.C  (+49 more)
Dictionaries/: Constants.cxx  Constants.h  Names.cxx  Names.h  README.md
Functions/: AnalFits.cxx  AnalFits.h  ArrayTools.cxx  ArrayTools.h  BifurcatedCB.cxx  BifurcatedCB.h  BoostTools.h  Constantize.cxx  Constantize.h  Dictreading.cxx  Dictreading.h  ErrorTools.cxx  ErrorTools.h  Extract_Var.cxx  Extract_Var.h  Filereading.cxx  Filereading.h  Filesaving.cxx  Filesaving.h  Fits.cxx  Fits.h  GetCoincidences.h  Interpol_exp.cxx  Interpol_exp.h  Ordenar.h  ParticleInfo.cxx  ParticleInfo.h  PlotTools.cxx  PlotTools.h  Probability.cxx  Probability.h  ProgressBar.cxx  ProgressBar.h  README.md  Roo2Exp.cxx  Roo2Exp.h  Roo2SumExp.cxx  Roo2SumExp.h  RooArgusGauss.cxx  RooArgusGauss.h  (+22 more)
