#Version
cmake_minimum_required(VERSION 3.3.2)

#Project name
project(aalfonso-tools)

#Set executable directory
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

#Add flags to compile using root libraries
execute_process(COMMAND root-config --noauxcflags --cflags --libs OUTPUT_VARIABLE CMAKE_CXX_FLAGS)
string(REGEX REPLACE "\n$" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
#If you're on lxplus and with the default root binary, use D_GLIBCXX_USE_CXX11_ABI=0
#When using your own build, or a debian distribution, use D_GLIBCXX_USE_CXX11_ABI=1
string(APPEND CMAKE_CXX_FLAGS " -D_GLIBCXX_USE_CXX11_ABI=1 -Wall -Wextra -lTMVA -lRooFit -lRooFitCore -lRooStats -static-libstdc++")

#Lxplus is fucked up and there are missing links to libraries, these are the ones needed to compile...
#GSL
#string(APPEND CMAKE_CXX_FLAGS " -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/GSL/2.5-32fc5/x86_64-centos7-gcc9-opt/lib/ -lgsl -lgslcblas -lm")
#Davix
#string(APPEND CMAKE_CXX_FLAGS " -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/Davix/0.7.3-d94fa/x86_64-centos7-gcc9-opt/lib64 -ldavix")
#tbb
#string(APPEND CMAKE_CXX_FLAGS " -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/tbb/2020_U1-bbcac/x86_64-centos7-gcc9-opt/lib -ltbb")
#vdt
#string(APPEND CMAKE_CXX_FLAGS " -L/cvmfs/lhcb.cern.ch/lib/lcg/releases/vdt/0.4.3-992df/x86_64-centos7-gcc9-opt/lib -lvdt")

#Add Boost Library (Recommended local install folder. Version 1.72.0)
string(APPEND CMAKE_CXX_FLAGS " -I /usr/local/boost_1_72_0")
#Add Boost Library (Lxplus releases. Version 1.72.0)
string(APPEND CMAKE_CXX_FLAGS " -I /cvmfs/lhcb.cern.ch/lib/lcg/releases/Boost/1.72.0-d1982/x86_64-centos7-gcc9-opt/include")

#Bring the headers, such as Student.h into the project
include_directories(./)

#My two libraries
file(GLOB DICTIONARIES "./Dictionaries/*.cxx")
file(GLOB FUNCTIONS "./Functions/*.cxx")
add_library(aalfonso-dict ${DICTIONARIES})
add_library(aalfonso-func ${FUNCTIONS} ${DICTIONARIES})

#Add script files, that have the main function
add_executable(AddBranch.out AddBranch.C)
add_executable(AddPIDBranch.out AddPIDBranch.C)
add_executable(AppendVars.out AppendVars.C)
add_executable(AssignRefWeight.out AssignRefWeight.C)
add_executable(BDTApply2.out BDTApply2.C)
add_executable(BDTApply.out BDTApply.C)
add_executable(BDT_BvsS.out BDT_BvsS.C)
add_executable(BDTCut.out BDTCut.C)
add_executable(BDTMerit.out BDTMerit.C)
add_executable(BDTTrain2.out BDTTrain2.C)
add_executable(BDTTrain.out BDTTrain.C)
#add_executable(BinEfficiencyAfter.out BinEfficiencyAfter.C)
add_executable(BRatio_NstG.out BRatio_NstG.C)
add_executable(BRatio_NstG_split.out BRatio_NstG_split.C)
add_executable(BRatio_NstG_Simult.out BRatio_NstG_Simult.C)
add_executable(CheckMultiplicity.out CheckMultiplicity.C)
add_executable(Compare.out Compare.C)
add_executable(CompareList.out CompareList.C)
add_executable(Compute_Value.out Compute_Value.C)
add_executable(Create_Cuts.out Create_Cuts.C)
add_executable(CutEff.out CutEff.C)
add_executable(CutSig.out CutSig.C)
add_executable(CutTree.out CutTree.C)
add_executable(EffPerBin.out EffPerBin.C)
add_executable(EffStats.out EffStats.C)
add_executable(EntriesTable.out EntriesTable.C)
add_executable(Err_Frac.out Err_Frac.C)
add_executable(ExpYield.out ExpYield.C)
add_executable(Fit_NstG.out Fit_NstG.C)
add_executable(Fit_NstG_ppimumu.out Fit_NstG_ppimumu.C)
add_executable(Fit_NstG_pKmumu.out Fit_NstG_pKmumu.C)
add_executable(Fit_NstG_Simult.out Fit_NstG_Simult.C)
add_executable(HomoBins.out HomoBins.C)
add_executable(InvertCut.out InvertCut.C)
add_executable(LatexTable.out LatexTable.C)
add_executable(MakeVarList.out MakeVarList.C)
add_executable(MassSub.out MassSub.C)
add_executable(Merge_Trigger.out Merge_Trigger.C)
add_executable(Multiplicity_Extrasel.out Multiplicity_Extrasel.C)
add_executable(OutputSearch.out OutputSearch.C)
add_executable(PhaseSpace.out PhaseSpace.C)
add_executable(PIDMatrix.out PIDMatrix.C)
add_executable(PIDPunzi.out PIDPunzi.C)
add_executable(PIDTable.out PIDTable.C)
add_executable(plot2D.out plot2D.C)
add_executable(PlotCorrVar.out PlotCorrVar.C)
add_executable(PlotTable.out PlotTable.C)
add_executable(PlotUsedVars.out PlotUsedVars.C)
add_executable(PlotVar.out PlotVar.C)
add_executable(Ratio_NstG.out Ratio_NstG.C)
add_executable(RenameBranch.out RenameBranch.C)
add_executable(Reweight2D.out Reweight2D.C)
add_executable(ROC_Area.out ROC_Area.C)
add_executable(ScaleYields.out ScaleYields.C)
add_executable(sPlot.out sPlot.C)
add_executable(sWeight.out sWeight.C)
add_executable(TISTOS.out TISTOS.C)
add_executable(Trigger_effs.out Trigger_effs.C)
add_executable(TupleCorr.out TupleCorr.C)
add_executable(UnbinnedReweight.out UnbinnedReweight.C)
add_executable(VarFit.out VarFit.C)
add_executable(VarProfile.out VarProfile.C)
add_executable(Vodka.out Vodka.C)
add_executable(WriteFromDic.out WriteFromDic.C)
add_executable(WriteFromWS.out WriteFromWS.C)

#Linking to compile
target_link_libraries(AddBranch.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(AddPIDBranch.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(AppendVars.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(AssignRefWeight.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTApply2.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTApply.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDT_BvsS.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTCut.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTMerit.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTTrain2.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BDTTrain.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
#target_link_libraries(BinEfficiencyAfter.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BRatio_NstG.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BRatio_NstG_split.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(BRatio_NstG_Simult.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(CheckMultiplicity.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Compare.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(CompareList.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Compute_Value.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Create_Cuts.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(CutEff.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(CutSig.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(CutTree.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(EffPerBin.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(EffStats.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(EntriesTable.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Err_Frac.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(ExpYield.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Fit_NstG.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Fit_NstG_ppimumu.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Fit_NstG_pKmumu.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Fit_NstG_Simult.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(HomoBins.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(InvertCut.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(LatexTable.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(MakeVarList.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(MassSub.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Merge_Trigger.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Multiplicity_Extrasel.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(OutputSearch.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PhaseSpace.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PIDMatrix.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PIDPunzi.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PIDTable.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(plot2D.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PlotCorrVar.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PlotTable.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PlotUsedVars.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(PlotVar.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Ratio_NstG.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(RenameBranch.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Reweight2D.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(ROC_Area.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(ScaleYields.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(sPlot.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(sWeight.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(TISTOS.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Trigger_effs.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(TupleCorr.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(UnbinnedReweight.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(VarFit.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(VarProfile.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(Vodka.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(WriteFromDic.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
target_link_libraries(WriteFromWS.out aalfonso-dict aalfonso-func "${CMAKE_CXX_FLAGS}")
